objects/License__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Location__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT( Location__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appeal_Submitted__c</fullName>
        <label>Appeal Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>LicenseApplication__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IGB_Establishment_Type__c</fullName>
        <formula>TEXT(  Location__r.IGB_Establishment_Type__c )</formula>
        <label>IGB Establishment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGB_Number__c</fullName>
        <label>IGB Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGB_Renewal_Flag__c</fullName>
        <formula>/*This is a pending formula - for if/when the IGB updates the exp date to 2 years - NOTE: some variables may require adjusting, such as date field parameters:

if(or(and( RecordType.Name = &quot;IGB Gaming License&quot;,Expiration_Date__c&lt;DATE(2024,01,31), (Expiration_Date__c - License_Copy_Received_Date__c )&gt; 395),

(and( RecordType.Name = &quot;IGB Gaming License&quot;,Expiration_Date__c &gt;= DATE(2024,01,31), (Expiration_Date__c - License_Copy_Received_Date__c )&gt; 730))),TRUE,FALSE)*/

if(and(  RecordType.Name = &quot;IGB Gaming License&quot;,  (Expiration_Date__c -  License_Copy_Received_Date__c  )&gt; 395),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGB Renewal Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LicenseAppID__c</fullName>
        <label>LicenseAppID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Appeal_Date__c</fullName>
        <label>License Appeal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Copy_Received_Date__c</fullName>
        <label>License Copy Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Denied_Date__c</fullName>
        <label>License Denied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Denied_Renewal_Date__c</fullName>
        <label>License Denied Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Month__c</fullName>
        <label>License Expiration Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Issue_Date__c</fullName>
        <label>License Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Issuing_Authority__c</fullName>
        <label>License Issuing Authority</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Notes__c</fullName>
        <label>License Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Original_Issue_Date__c</fullName>
        <label>License Original Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Renewal_Date__c</fullName>
        <label>License Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Revoked_Date__c</fullName>
        <label>License Revoked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location DBA Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Municipality</label>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_RelatedList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecTypeIDLookup__c</fullName>
        <formula>RecordTypeId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecTypeIDLookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Sent_Date__c</fullName>
        <label>Request Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Liquor_Copy_Rcvd_Flag__c</fullName>
        <formula>if(and( RecordType.Name = &quot;State Liquor License&quot;, (Expiration_Date__c -  License_Copy_Received_Date__c )&gt; 425),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Liquor Copy Rcvd Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Flag_Formula__c</fullName>
        <formula>if(or(and( RecordType.Name = &quot;IGB Gaming License&quot;,Expiration_Date__c&lt;DATE(2024,01,31), (Expiration_Date__c - License_Copy_Received_Date__c )&gt; 395),

(and( RecordType.Name = &quot;IGB Gaming License&quot;,Expiration_Date__c &gt;= DATE(2024,01,31), (Expiration_Date__c - License_Copy_Received_Date__c )&gt; 730))),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Flag Formula</label>
        <type>Checkbox</type>
    </fields>
    <label>License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Location__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>License_Copy_Received_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>IGB_Licenses_Expiring_This_Month</fullName>
        <columns>Location__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>License_Copy_Received_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>License__c.IGB_Gaming_License</value>
        </filters>
        <filters>
            <field>License_Expiration_Month__c</field>
            <operation>equals</operation>
            <value>December</value>
        </filters>
        <label>IGB Licenses Expiring This Month</label>
        <sharedTo>
            <role>Accel_Super_User</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>License Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <recordTypes>
        <fullName>DOJ</fullName>
        <active>true</active>
        <label>DOJ</label>
    </recordTypes>
    <recordTypes>
        <fullName>IGB_Gaming_License</fullName>
        <active>true</active>
        <label>IGB Gaming License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Illinois_Business_Authorization</fullName>
        <active>true</active>
        <label>Illinois Business Authorization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Gaming_License</fullName>
        <active>true</active>
        <label>Local Gaming License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Liquor_License</fullName>
        <active>true</active>
        <label>Local Liquor License</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Liquor_License</fullName>
        <active>true</active>
        <label>State Liquor License</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DOJ_License_Already_Exists_for_Account</fullName>
        <active>true</active>
        <description>When a DOJ license already exists for an Account</description>
        <errorConditionFormula>AND(
ISNEW(),
RecordType.DeveloperName = &apos;DOJ&apos;,
not(isblank(Location__r.Active_DOJ_License__c)))</errorConditionFormula>
        <errorMessage>We show that a DOJ License for this Account already exists, therefore this License cannot be created. Please contact your admin if you believe this to be in error.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>License_Type</fullName>
        <active>false</active>
        <errorConditionFormula>IF(OR($Profile.Name =&apos;Accel Relationship Manager&apos;, $Profile.Name =&apos;Accel Business Development Manager&apos;),
IF( RecordType.Name=&apos;DOJ&apos;, FALSE, TRUE), FALSE)</errorConditionFormula>
        <errorMessage>You don&apos;t have the appropriate rights to modify this License Type. Contact your administrative team.</errorMessage>
    </validationRules>
</CustomObject>